[fix] visible msg text element on the right on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -85,6 +85,7 @@ body {
 	color: #318eff;
 }
 .zero {
+	display: block;
 	-webkit-transform: translateX(0);
 	transform: translateX(0);
 	transition: all 0.3s;
